Fix display on narrow viewports

--- a/apps/prairielearn/assets/stylesheets/instructorAiGenerateDraftEditor.css
+++ b/apps/prairielearn/assets/stylesheets/instructorAiGenerateDraftEditor.css
@@ -86,7 +86,7 @@ body,
   }
 
   .app-content {
-    grid-template-areas: 'chat' 'preview';
+    grid-template-areas: 'back' 'chat' 'preview-tabs' 'preview';
     grid-template-columns: 1fr;
   }
 
